refactor, update data model diagram, update deps